--- a/app/src/main/res/layout/item_roll_write.xml
+++ b/app/src/main/res/layout/item_roll_write.xml
@@ -39,7 +39,7 @@
                     android:background="?attr/selectableItemBackground"
                     android:contentDescription="@null"
                     android:tint="@color/colorDark"
-                    app:srcCompat="@drawable/ic_button_move" />
+                    app:srcCompat="@drawable/ic_move" />
 
             </FrameLayout>
 
