--- a/app/src/main/res/layout/act_main.xml
+++ b/app/src/main/res/layout/act_main.xml
@@ -27,32 +27,6 @@
         android:background="@color/colorWhite"
         app:itemIconTint="@drawable/se_menu_main_item"
         app:itemTextColor="@drawable/se_menu_main_item"
-        app:menu="@menu/menu_act_main"
-        android:visibility="gone"/>
-
-    <androidx.coordinatorlayout.widget.CoordinatorLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <com.google.android.material.bottomappbar.BottomAppBar
-            android:id="@+id/bottom_app_bar"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="bottom"
-            style="@style/Widget.MaterialComponents.BottomAppBar"
-            app:backgroundTint="@color/noteBrown"
-            app:fabAlignmentMode="center"
-            app:navigationIcon="@drawable/ic_button_add" />
-
-        <com.google.android.material.floatingactionbutton.FloatingActionButton
-            android:id="@+id/fab"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:srcCompat="@drawable/ic_button_add"
-            android:tint="@color/colorDark"
-            app:backgroundTint="@color/noteBrownDark"
-            app:layout_anchor="@id/bottom_app_bar" />
-
-    </androidx.coordinatorlayout.widget.CoordinatorLayout>
+        app:menu="@menu/menu_act_main" />
 
 </LinearLayout>
