--- a/app/src/main/res/layout/frg_roll.xml
+++ b/app/src/main/res/layout/frg_roll.xml
@@ -89,7 +89,7 @@
                     android:layout_marginStart="@dimen/item_layout_small_indent"
                     android:background="?attr/selectableItemBackgroundBorderless"
                     android:padding="@dimen/item_layout_medium_indent"
-                    app:srcCompat="@drawable/ic_button_add" />
+                    app:srcCompat="@drawable/ic_add" />
 
             </LinearLayout>
         </LinearLayout>
