--- a/app/src/main/res/layout/item_rank.xml
+++ b/app/src/main/res/layout/item_rank.xml
@@ -44,7 +44,7 @@
                     android:layout_marginRight="@dimen/item_layout_medium_indent"
                     android:background="?attr/selectableItemBackgroundBorderless"
                     android:padding="@dimen/item_layout_medium_indent"
-                    app:srcCompat="@drawable/ic_button_visible_on" />
+                    app:srcCompat="@drawable/ic_visible_on" />
 
                 <LinearLayout
                     android:layout_width="0dp"
@@ -116,7 +116,7 @@
                     android:padding="@dimen/item_layout_medium_indent"
                     android:contentDescription="@null"
                     android:tint="@color/colorDark"
-                    app:srcCompat="@drawable/ic_button_cancel" />
+                    app:srcCompat="@drawable/ic_cancel" />
 
             </LinearLayout>
         </FrameLayout>
