--- a/app/src/main/res/menu/menu_frg_note.xml
+++ b/app/src/main/res/menu/menu_frg_note.xml
@@ -6,7 +6,7 @@
 
     <item
         android:id="@+id/menu_frgNote_settings"
-        android:icon="@drawable/ic_menu_settings"
+        android:icon="@drawable/ic_settings"
         android:title="@string/menu_page_notes_settings"
         app:showAsAction="always" />
 
