--- a/app/src/main/res/layout/act_main.xml
+++ b/app/src/main/res/layout/act_main.xml
@@ -8,17 +8,10 @@
     tools:context=".app.view.act.ActMain">
 
     <FrameLayout
+        android:id="@+id/actMain_fl_container"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1">
-
-        <androidx.viewpager.widget.ViewPager
-            android:id="@+id/actMain_vp"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:overScrollMode="never" />
-
-    </FrameLayout>
+        android:layout_weight="1"/>
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/actMain_bnv_menu"
