--- a/app/src/main/res/layout/item_roll_read.xml
+++ b/app/src/main/res/layout/item_roll_read.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
 
@@ -17,56 +18,53 @@
 
     </data>
 
-    <FrameLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="@dimen/item_layout_main_indent"
-        android:background="?android:attr/listDivider">
+    <androidx.cardview.widget.CardView
+        style="@style/ItemCardView"
+        app:cardBackgroundColor="@color/colorPrimary"
+        app:cardUseCompatPadding="false">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="@dimen/item_layout_sub_indent"
-            android:background="@color/colorWhite"
-            android:orientation="horizontal">
+            android:layout_height="wrap_content">
 
-            <FrameLayout
+        <FrameLayout
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent">
+
+            <CheckBox
+                android:id="@+id/itemRoll_cb_check"
                 android:layout_width="wrap_content"
-                android:layout_height="match_parent">
+                android:layout_height="match_parent"
+                android:background="@android:color/transparent"
+                android:checked='@{itemRoll.check}'
+                android:clickable="false" />
 
-                <CheckBox
-                    android:id="@+id/itemRoll_cb_check"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:background="@android:color/transparent"
-                    android:checked='@{itemRoll.check}'
-                    android:clickable="false" />
-
-                <ImageView
-                    android:id="@+id/itemRoll_iv_click"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:contentDescription="@null"
-                    android:background="?attr/selectableItemBackground"
-                    android:visibility='@{keyBin ? v.INVISIBLE : v.VISIBLE}' />
-
-            </FrameLayout>
-
-            <TextView
-                android:id="@+id/itemRoll_tv_text"
-                style="@style/EditText"
+            <ImageView
+                android:id="@+id/itemRoll_iv_click"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:autoLink="all"
-                android:background="@color/colorWhite"
-                android:gravity="top"
-                android:linksClickable="true"
-                android:minHeight="32dp"
-                android:padding="@dimen/item_layout_medium_indent"
-                android:text='@{itemRoll.text}'
-                android:textIsSelectable="true"
-                android:textSize="@dimen/text_big_size" />
+                android:layout_height="match_parent"
+                android:background="?attr/selectableItemBackground"
+                android:contentDescription="@null"
+                android:visibility='@{keyBin ? v.INVISIBLE : v.VISIBLE}' />
+
+        </FrameLayout>
+
+        <TextView
+            android:id="@+id/itemRoll_tv_text"
+            style="@style/EditText"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:autoLink="all"
+            android:background="@color/colorWhite"
+            android:gravity="top"
+            android:linksClickable="true"
+            android:minHeight="32dp"
+            android:padding="@dimen/item_layout_medium_indent"
+            android:text='@{itemRoll.text}'
+            android:textIsSelectable="true"
+            android:textSize="@dimen/text_big_size" />
 
         </LinearLayout>
-    </FrameLayout>
+
+    </androidx.cardview.widget.CardView>
 </layout>
