--- a/app/src/main/res/layout-v21/inc_toolbar_rank.xml
+++ b/app/src/main/res/layout-v21/inc_toolbar_rank.xml
@@ -8,10 +8,7 @@
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/incToolbar_tb"
-        android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
-        android:background="?attr/colorPrimary"
-        android:theme="@style/AppTheme.AppBarTheme"
+        style="@style/Toolbar"
         app:contentInsetEnd="@dimen/item_layout_medium_indent"
         app:contentInsetLeft="@dimen/item_layout_medium_indent"
         app:contentInsetRight="@dimen/item_layout_medium_indent"
@@ -20,19 +17,20 @@
 
         <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            app:cardBackgroundColor="@color/colorPrimary"
+            app:cardUseCompatPadding="false">
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@color/colorPrimary">
+                android:layout_height="wrap_content">
 
                 <ImageButton
                     android:id="@+id/incToolbarRank_ib_cancel"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginEnd="@dimen/item_layout_small_indent"
                     android:layout_marginStart="@dimen/item_layout_small_indent"
+                    android:layout_marginEnd="@dimen/item_layout_small_indent"
                     android:background="?attr/selectableItemBackgroundBorderless"
                     android:contentDescription="@null"
                     android:padding="@dimen/item_layout_medium_indent"
@@ -44,8 +42,8 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:layout_marginEnd="@dimen/item_layout_medium_indent"
                     android:layout_marginStart="@dimen/item_layout_medium_indent"
+                    android:layout_marginEnd="@dimen/item_layout_medium_indent"
                     android:layout_weight="1"
                     android:background="@android:color/transparent"
                     android:focusable="true"
@@ -61,8 +59,8 @@
                     android:id="@+id/incToolbarRank_ib_add"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginEnd="@dimen/item_layout_small_indent"
                     android:layout_marginStart="@dimen/item_layout_small_indent"
+                    android:layout_marginEnd="@dimen/item_layout_small_indent"
                     android:background="?attr/selectableItemBackgroundBorderless"
                     android:contentDescription="@null"
                     android:padding="@dimen/item_layout_medium_indent"
