--- a/app/src/main/res/layout/inc_toolbar.xml
+++ b/app/src/main/res/layout/inc_toolbar.xml
@@ -7,10 +7,7 @@
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/incToolbar_tb"
-        android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
-        android:background="?attr/colorPrimary"
-        android:theme="@style/AppTheme.AppBarTheme"
+        style="@style/Toolbar"
         app:popupTheme="@style/AppTheme.AppBarTheme" />
 
     <View style="@style/Divider.Horizontal" />
