--- a/app/src/main/res/layout/item_note_roll.xml
+++ b/app/src/main/res/layout/item_note_roll.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
 
@@ -25,235 +26,141 @@
 
     </data>
 
-    <FrameLayout xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:id="@+id/itemNote_fl_main"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="@dimen/item_layout_main_indent"
-        android:background='@{Icon.getColor(context, true, itemNote.color)}'>
+    <androidx.cardview.widget.CardView
+        style="@style/ItemCardView"
+        app:cardBackgroundColor='@{Icon.getColor(context, false, itemNote.color)}'
+        app:cardUseCompatPadding="false">
 
-        <FrameLayout
-            android:id="@+id/itemNote_fl_submain"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="@dimen/item_layout_sub_indent"
-            android:background='@{Icon.getColor(context, false, itemNote.color)}'>
+        <LinearLayout
+            android:id="@+id/itemNote_ll_click"
+            style="@style/Note.Click">
+
+            <TextView
+                android:id="@+id/itemNote_tv_name"
+                style="@style/Note.Name"
+                android:text='@{itemNote.name}'
+                android:visibility='@{text.isEmpty(itemNote.name) ? v.GONE : v.VISIBLE}' />
 
             <LinearLayout
-                android:id="@+id/itemNote_ll_click"
+                android:id="@+id/itemNote_ll_roll_1"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="?attr/selectableItemBackground"
-                android:orientation="vertical"
-                android:padding="@dimen/item_layout_medium_indent">
+                android:layout_height="match_parent"
+                android:orientation="horizontal"
+                android:visibility='@{listRoll.size() &gt;= 1 ? v.VISIBLE : v.GONE}'>
+
+                <ImageView
+                    android:id="@+id/itemNote_iv_check_1"
+                    style="@style/Note.Indicator"
+                    android:src='@{listRoll.size() &gt;= 1 &amp;&amp; listRoll.get(0).check ? @drawable/ic_check_done : @drawable/ic_check_outline}' />
 
                 <TextView
-                    android:id="@+id/itemNote_tv_name"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="@dimen/item_layout_medium_indent"
-                    android:ellipsize="end"
-                    android:maxLines="1"
-                    android:text='@{itemNote.name}'
-                    android:textColor="@color/colorDark"
-                    android:textSize="@dimen/text_big_size"
-                    android:visibility='@{text.isEmpty(itemNote.name) ? v.GONE : v.VISIBLE}' />
+                    android:id="@+id/itemNote_tv_text_1"
+                    style="@style/Note.Roll"
+                    android:text='@{listRoll.size() &gt;= 1 ? listRoll.get(0).text : @string/test_item_note_roll_1}' />
 
-                <LinearLayout
-                    android:id="@+id/itemNote_ll_roll_1"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:orientation="horizontal"
-                    android:visibility='@{listRoll.size() &gt;= 1 ? v.VISIBLE : v.GONE}'>
-
-                    <ImageView
-                        android:id="@+id/itemNote_iv_check_1"
-                        android:layout_width="@dimen/icon_small_size"
-                        android:layout_height="@dimen/icon_small_size"
-                        android:layout_gravity="center"
-                        android:contentDescription="@null"
-                        android:src='@{listRoll.size() &gt;= 1 &amp;&amp; listRoll.get(0).check ? @drawable/ic_check_done : @drawable/ic_check_outline}'
-                        android:tint="@color/colorDark" />
-
-                    <TextView
-                        android:id="@+id/itemNote_tv_text_1"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        android:layout_marginLeft="@dimen/item_layout_small_indent"
-                        android:layout_marginStart="@dimen/item_layout_small_indent"
-                        android:ellipsize="end"
-                        android:maxLines="1"
-                        android:text='@{listRoll.size() &gt;= 1 ? listRoll.get(0).text : @string/test_item_note_roll_1}'
-                        android:textColor="@color/colorDark"
-                        android:textSize="@dimen/text_medium_size" />
-
-                </LinearLayout>
-
-                <LinearLayout
-                    android:id="@+id/itemNote_ll_roll_2"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:orientation="horizontal"
-                    android:visibility='@{listRoll.size() &gt;= 2 ? v.VISIBLE : v.GONE}'>
-
-
-                    <ImageView
-                        android:id="@+id/itemNote_iv_check_2"
-                        android:layout_width="@dimen/icon_small_size"
-                        android:layout_height="@dimen/icon_small_size"
-                        android:layout_gravity="center"
-                        android:contentDescription="@null"
-                        android:src='@{listRoll.size() &gt;= 2 &amp;&amp; listRoll.get(1).check ? @drawable/ic_check_done : @drawable/ic_check_outline}'
-                        android:tint="@color/colorDark" />
-
-                    <TextView
-                        android:id="@+id/itemNote_tv_text_2"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        android:layout_marginLeft="@dimen/item_layout_small_indent"
-                        android:layout_marginStart="@dimen/item_layout_small_indent"
-                        android:ellipsize="end"
-                        android:maxLines="1"
-                        android:text='@{listRoll.size() &gt;= 2 ? listRoll.get(1).text : @string/test_item_note_roll_2}'
-                        android:textColor="@color/colorDark"
-                        android:textSize="@dimen/text_medium_size" />
-
-                </LinearLayout>
-
-                <LinearLayout
-                    android:id="@+id/itemNote_ll_roll_3"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:orientation="horizontal"
-                    android:visibility='@{listRoll.size() &gt;= 3 ? v.VISIBLE : v.GONE}'>
-
-
-                    <ImageView
-                        android:id="@+id/itemNote_iv_check_3"
-                        android:layout_width="@dimen/icon_small_size"
-                        android:layout_height="@dimen/icon_small_size"
-                        android:layout_gravity="center"
-                        android:contentDescription="@null"
-                        android:src='@{listRoll.size() &gt;= 3 &amp;&amp; listRoll.get(2).check ? @drawable/ic_check_done : @drawable/ic_check_outline}'
-                        android:tint="@color/colorDark" />
-
-                    <TextView
-                        android:id="@+id/itemNote_tv_text_3"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        android:layout_marginLeft="@dimen/item_layout_small_indent"
-                        android:layout_marginStart="@dimen/item_layout_small_indent"
-                        android:ellipsize="end"
-                        android:maxLines="1"
-                        android:text='@{listRoll.size() &gt;= 3 ? listRoll.get(2).text : @string/test_item_note_roll_3}'
-                        android:textColor="@color/colorDark"
-                        android:textSize="@dimen/text_medium_size" />
-
-                </LinearLayout>
-
-                <LinearLayout
-                    android:id="@+id/itemNote_ll_roll_4"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:orientation="horizontal"
-                    android:visibility='@{listRoll.size() &gt;= 4 ? v.VISIBLE : v.GONE}'>
-
-                    <ImageView
-                        android:id="@+id/itemNote_iv_check_4"
-                        android:layout_width="@dimen/icon_small_size"
-                        android:layout_height="@dimen/icon_small_size"
-                        android:layout_gravity="center"
-                        android:contentDescription="@null"
-                        android:src='@{listRoll.size() &gt;= 4 &amp;&amp; listRoll.get(3).check ? @drawable/ic_check_done : @drawable/ic_check_outline}'
-                        android:tint="@color/colorDark" />
-
-                    <TextView
-                        android:id="@+id/itemNote_tv_text_4"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        android:layout_marginLeft="@dimen/item_layout_small_indent"
-                        android:layout_marginStart="@dimen/item_layout_small_indent"
-                        android:ellipsize="end"
-                        android:maxLines="1"
-                        android:text='@{listRoll.size() &gt;= 4 ? listRoll.get(3).text : @string/test_item_note_roll_4}'
-                        android:textColor="@color/colorDark"
-                        android:textSize="@dimen/text_medium_size" />
-
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_marginTop="@dimen/item_layout_medium_indent"
-                    android:orientation="horizontal">
-
-                    <ImageView
-                        android:id="@+id/itemNote_iv_rank"
-                        android:layout_width="@dimen/icon_small_size"
-                        android:layout_height="@dimen/icon_small_size"
-                        android:layout_gravity="center"
-                        android:layout_marginEnd="@dimen/item_layout_small_indent"
-                        android:layout_marginRight="@dimen/item_layout_small_indent"
-                        android:contentDescription="@null"
-                        android:tint="@color/colorDark"
-                        android:visibility='@{itemNote.rankId.length == 0 ? v.GONE : v.VISIBLE}'
-                        app:srcCompat="@drawable/ic_rank" />
-
-                    <ImageView
-                        android:id="@+id/itemNote_iv_bind"
-                        android:layout_width="@dimen/icon_small_size"
-                        android:layout_height="@dimen/icon_small_size"
-                        android:layout_gravity="center"
-                        android:layout_marginEnd="@dimen/item_layout_small_indent"
-                        android:layout_marginRight="@dimen/item_layout_small_indent"
-                        android:contentDescription="@null"
-                        android:tint="@color/colorDark"
-                        android:visibility='@{itemNote.status ? v.VISIBLE : v.GONE}'
-                        app:srcCompat="@drawable/ic_bind_roll" />
-
-                    <TextView
-                        android:id="@+id/itemNote_tv_text"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginEnd="@dimen/item_layout_small_indent"
-                        android:layout_marginRight="@dimen/item_layout_small_indent"
-                        android:ellipsize="end"
-                        android:maxLines="1"
-                        android:text='@{itemNote.text}'
-                        android:textColor="@color/colorDark"
-                        android:textSize="@dimen/text_small_size" />
-
-                    <TextView
-                        android:id="@+id/itemNote_tv_change"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_marginEnd="@dimen/item_layout_small_indent"
-                        android:layout_marginRight="@dimen/item_layout_small_indent"
-                        android:layout_weight="1"
-                        android:ellipsize="end"
-                        android:maxLines="1"
-                        android:text='@{Time.formatNoteDate(context, itemNote.change)}'
-                        android:textColor="@color/colorDark"
-                        android:textSize="@dimen/text_small_size" />
-
-                    <TextView
-                        android:id="@+id/itemNote_tv_create"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginEnd="@dimen/item_layout_small_indent"
-                        android:layout_marginRight="@dimen/item_layout_small_indent"
-                        android:ellipsize="end"
-                        android:maxLines="1"
-                        android:text='@{Time.formatNoteDate(context, itemNote.create)}'
-                        android:textColor="@color/colorDark"
-                        android:textSize="@dimen/text_small_size" />
-
-                </LinearLayout>
             </LinearLayout>
-        </FrameLayout>
-    </FrameLayout>
+
+            <LinearLayout
+                android:id="@+id/itemNote_ll_roll_2"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal"
+                android:visibility='@{listRoll.size() &gt;= 2 ? v.VISIBLE : v.GONE}'>
+
+
+                <ImageView
+                    android:id="@+id/itemNote_iv_check_2"
+                    style="@style/Note.Indicator"
+                    android:src='@{listRoll.size() &gt;= 2 &amp;&amp; listRoll.get(1).check ? @drawable/ic_check_done : @drawable/ic_check_outline}' />
+
+                <TextView
+                    android:id="@+id/itemNote_tv_text_2"
+                    style="@style/Note.Roll"
+                    android:text='@{listRoll.size() &gt;= 2 ? listRoll.get(1).text : @string/test_item_note_roll_2}' />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/itemNote_ll_roll_3"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal"
+                android:visibility='@{listRoll.size() &gt;= 3 ? v.VISIBLE : v.GONE}'>
+
+
+                <ImageView
+                    android:id="@+id/itemNote_iv_check_3"
+                    style="@style/Note.Indicator"
+                    android:src='@{listRoll.size() &gt;= 3 &amp;&amp; listRoll.get(2).check ? @drawable/ic_check_done : @drawable/ic_check_outline}' />
+
+                <TextView
+                    android:id="@+id/itemNote_tv_text_3"
+                    style="@style/Note.Roll"
+                    android:text='@{listRoll.size() &gt;= 3 ? listRoll.get(2).text : @string/test_item_note_roll_3}' />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/itemNote_ll_roll_4"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal"
+                android:visibility='@{listRoll.size() &gt;= 4 ? v.VISIBLE : v.GONE}'>
+
+                <ImageView
+                    android:id="@+id/itemNote_iv_check_4"
+                    style="@style/Note.Indicator"
+                    android:src='@{listRoll.size() &gt;= 4 &amp;&amp; listRoll.get(3).check ? @drawable/ic_check_done : @drawable/ic_check_outline}' />
+
+                <TextView
+                    android:id="@+id/itemNote_tv_text_4"
+                    style="@style/Note.Roll"
+                    android:text='@{listRoll.size() &gt;= 4 ? listRoll.get(3).text : @string/test_item_note_roll_4}' />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginTop="@dimen/item_layout_medium_indent"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:id="@+id/itemNote_iv_rank"
+                    style="@style/Note.Indicator"
+                    android:layout_marginEnd="@dimen/item_layout_small_indent"
+                    android:layout_marginRight="@dimen/item_layout_small_indent"
+                    android:visibility='@{itemNote.rankId.length == 0 ? v.GONE : v.VISIBLE}'
+                    app:srcCompat="@drawable/ic_rank" />
+
+                <ImageView
+                    android:id="@+id/itemNote_iv_bind"
+                    style="@style/Note.Indicator"
+                    android:layout_marginEnd="@dimen/item_layout_small_indent"
+                    android:layout_marginRight="@dimen/item_layout_small_indent"
+                    android:visibility='@{itemNote.status ? v.VISIBLE : v.GONE}'
+                    app:srcCompat="@drawable/ic_bind_roll" />
+
+                <TextView
+                    android:id="@+id/itemNote_tv_text"
+                    style="@style/Note.Info"
+                    android:layout_width="wrap_content"
+                    android:text='@{itemNote.text}' />
+
+                <TextView
+                    android:id="@+id/itemNote_tv_change"
+                    style="@style/Note.Info"
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:text='@{Time.formatNoteDate(context, itemNote.change)}' />
+
+                <TextView
+                    android:id="@+id/itemNote_tv_create"
+                    style="@style/Note.Info"
+                    android:layout_width="wrap_content"
+                    android:text='@{Time.formatNoteDate(context, itemNote.create)}' />
+
+            </LinearLayout>
+        </LinearLayout>
+    </androidx.cardview.widget.CardView>
 </layout>
