--- a/app/src/main/res/layout/item_rank.xml
+++ b/app/src/main/res/layout/item_rank.xml
@@ -14,111 +14,103 @@
 
     </data>
 
-    <FrameLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="@dimen/item_layout_main_indent"
-        android:background="?android:attr/listDivider">
+    <androidx.cardview.widget.CardView
+        style="@style/ItemCardView"
+        app:cardBackgroundColor="@color/colorWhite"
+        app:cardUseCompatPadding="false">
 
-        <FrameLayout
+        <LinearLayout
+            android:id="@+id/itemRank_ll_click"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="@dimen/item_layout_sub_indent"
-            android:background="@color/noteWhite">
+            android:background="?attr/selectableItemBackground"
+            android:orientation="horizontal"
+            android:padding="@dimen/item_layout_medium_indent"
+            android:weightSum="1">
+
+            <sgtmelon.handynotes.element.button.ButtonVisiblePre
+                android:id="@+id/itemRank_bv_visible"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginEnd="@dimen/item_layout_medium_indent"
+                android:layout_marginRight="@dimen/item_layout_medium_indent"
+                android:background="?attr/selectableItemBackgroundBorderless"
+                android:padding="@dimen/item_layout_medium_indent"
+                app:srcCompat="@drawable/ic_visible_on" />
 
             <LinearLayout
-                android:id="@+id/itemRank_ll_click"
-                android:layout_width="match_parent"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:background="?attr/selectableItemBackground"
-                android:orientation="horizontal"
-                android:padding="@dimen/item_layout_medium_indent"
-                android:weightSum="1">
+                android:layout_weight="1"
+                android:orientation="vertical">
 
-                <sgtmelon.handynotes.element.button.ButtonVisiblePre
-                    android:id="@+id/itemRank_bv_visible"
-                    android:layout_width="wrap_content"
+                <TextView
+                    android:id="@+id/itemRank_tv_name"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_marginEnd="@dimen/item_layout_medium_indent"
-                    android:layout_marginRight="@dimen/item_layout_medium_indent"
-                    android:background="?attr/selectableItemBackgroundBorderless"
-                    android:padding="@dimen/item_layout_medium_indent"
-                    app:srcCompat="@drawable/ic_visible_on" />
+                    android:layout_marginBottom="@dimen/item_layout_medium_indent"
+                    android:ellipsize="end"
+                    android:maxLines="1"
+                    android:text='@{itemRank.name}'
+                    android:textColor="@color/colorDark"
+                    android:textSize="@dimen/text_medium_size" />
 
                 <LinearLayout
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:orientation="vertical">
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
 
                     <TextView
-                        android:id="@+id/itemRank_tv_name"
-                        android:layout_width="match_parent"
+                        android:id="@+id/itemRank_tv_textCount"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginBottom="@dimen/item_layout_medium_indent"
-                        android:ellipsize="end"
-                        android:maxLines="1"
-                        android:text='@{itemRank.name}'
+                        android:layout_marginEnd="@dimen/item_layout_small_indent"
+                        android:layout_marginRight="@dimen/item_layout_small_indent"
+                        android:ellipsize="start"
+                        android:singleLine="true"
+                        android:text='@{@string/list_item_rank_text_count + " " + itemRank.getTextCount()}'
                         android:textColor="@color/colorDark"
-                        android:textSize="@dimen/text_medium_size" />
+                        android:textSize="@dimen/text_small_size" />
 
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content">
+                    <TextView
+                        android:id="@+id/itemRank_tv_rollCount"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginEnd="@dimen/item_layout_small_indent"
+                        android:layout_marginRight="@dimen/item_layout_small_indent"
+                        android:ellipsize="start"
+                        android:singleLine="true"
+                        android:text='@{@string/list_item_rank_roll_count + " " + itemRank.getRollCount()}'
+                        android:textColor="@color/colorDark"
+                        android:textSize="@dimen/text_small_size" />
 
-                        <TextView
-                            android:id="@+id/itemRank_tv_textCount"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginEnd="@dimen/item_layout_small_indent"
-                            android:layout_marginRight="@dimen/item_layout_small_indent"
-                            android:ellipsize="start"
-                            android:singleLine="true"
-                            android:text='@{@string/list_item_rank_text_count + " " + itemRank.getTextCount()}'
-                            android:textColor="@color/colorDark"
-                            android:textSize="@dimen/text_small_size" />
+                    <TextView
+                        android:id="@+id/itemRank_tv_rollDone"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:ellipsize="start"
+                        android:singleLine="true"
+                        android:text='@{@string/list_item_rank_roll_check + " " + itemRank.getRollCheck() + "%"}'
+                        android:textColor="@color/colorDark"
+                        android:textSize="@dimen/text_small_size"
+                        android:visibility='@{itemRank.getRollCount() == 0 ? v.GONE : v.VISIBLE}' />
 
-                        <TextView
-                            android:id="@+id/itemRank_tv_rollCount"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginEnd="@dimen/item_layout_small_indent"
-                            android:layout_marginRight="@dimen/item_layout_small_indent"
-                            android:ellipsize="start"
-                            android:singleLine="true"
-                            android:text='@{@string/list_item_rank_roll_count + " " + itemRank.getRollCount()}'
-                            android:textColor="@color/colorDark"
-                            android:textSize="@dimen/text_small_size" />
-
-                        <TextView
-                            android:id="@+id/itemRank_tv_rollDone"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:ellipsize="start"
-                            android:singleLine="true"
-                            android:text='@{@string/list_item_rank_roll_check + " " + itemRank.getRollCheck() + "%"}'
-                            android:textColor="@color/colorDark"
-                            android:textSize="@dimen/text_small_size"
-                            android:visibility='@{itemRank.getRollCount() == 0 ? v.GONE : v.VISIBLE}' />
-
-                    </LinearLayout>
                 </LinearLayout>
-
-                <ImageButton
-                    android:id="@+id/itemRank_ib_cancel"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_marginLeft="@dimen/item_layout_medium_indent"
-                    android:layout_marginStart="@dimen/item_layout_medium_indent"
-                    android:background="?attr/selectableItemBackgroundBorderless"
-                    android:padding="@dimen/item_layout_medium_indent"
-                    android:contentDescription="@null"
-                    android:tint="@color/colorDark"
-                    app:srcCompat="@drawable/ic_cancel" />
-
             </LinearLayout>
-        </FrameLayout>
-    </FrameLayout>
+
+            <ImageButton
+                android:id="@+id/itemRank_ib_cancel"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginStart="@dimen/item_layout_medium_indent"
+                android:layout_marginLeft="@dimen/item_layout_medium_indent"
+                android:background="?attr/selectableItemBackgroundBorderless"
+                android:contentDescription="@null"
+                android:padding="@dimen/item_layout_medium_indent"
+                android:tint="@color/colorDark"
+                app:srcCompat="@drawable/ic_cancel" />
+
+        </LinearLayout>
+    </androidx.cardview.widget.CardView>
 </layout>
