--- a/app/src/main/res/layout-v21/inc_toolbar_rank.xml
+++ b/app/src/main/res/layout-v21/inc_toolbar_rank.xml
@@ -19,7 +19,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:cardBackgroundColor="@color/colorPrimary"
-            app:cardUseCompatPadding="false">
+            app:cardUseCompatPadding="false"
+            app:cardCornerRadius="@dimen/card_corner_radius">
 
             <LinearLayout
                 android:layout_width="match_parent"
