--- a/app/src/main/res/layout-v21/item_rank.xml
+++ b/app/src/main/res/layout-v21/item_rank.xml
@@ -17,7 +17,8 @@
     <androidx.cardview.widget.CardView
         style="@style/ItemCardView"
         app:cardBackgroundColor="@color/colorWhite"
-        app:cardUseCompatPadding="false">
+        app:cardUseCompatPadding="false"
+        app:cardCornerRadius="@dimen/card_corner_radius">
 
         <LinearLayout
             android:id="@+id/itemRank_ll_click"
